[gd_scene load_steps=33 format=3 uid="uid://bb5gordg8g48g"]

[ext_resource type="Texture2D" uid="uid://csllc4ya03qby" path="res://UI/Icons/sharp_pause_white_48dp.png" id="1_cgm83"]
[ext_resource type="Script" path="res://UI/game_ui.gd" id="1_y53i7"]
[ext_resource type="PackedScene" uid="uid://d3plnc1auau04" path="res://Items/Placeable/Scenes/elbow_pipe.tscn" id="2_4mokc"]
[ext_resource type="Texture2D" uid="uid://bo4lhh1tsi02x" path="res://UI/Icons/sharp_play_arrow_white_48dp.png" id="2_v3058"]
[ext_resource type="Texture2D" uid="uid://k0bj2mrlgou" path="res://UI/Icons/sharp_fast_forward_white_48dp.png" id="3_iqmpw"]
[ext_resource type="PackedScene" uid="uid://cmqohvuocd8es" path="res://Items/Placeable/Scenes/splitter.tscn" id="3_mkgc3"]
[ext_resource type="PackedScene" uid="uid://dixxthcbkd4gg" path="res://Items/Placeable/Scenes/launcher.tscn" id="4_pqaxj"]
[ext_resource type="PackedScene" uid="uid://d0ugtktuhfhyl" path="res://Items/Placeable/Scenes/delay.tscn" id="5_3imsr"]
[ext_resource type="PackedScene" uid="uid://vj7f4wk02auv" path="res://Items/Placeable/Scenes/destroy.tscn" id="6_ljt71"]
[ext_resource type="PackedScene" uid="uid://2ounmfs7tk1w" path="res://Items/Placeable/Scenes/teleport.tscn" id="7_5f214"]
[ext_resource type="Texture2D" uid="uid://b3nbipo4tac6x" path="res://UI/Icons/sharp_settings_white_48dp.png" id="8_kv8bb"]
[ext_resource type="Texture2D" uid="uid://d2vyjyoanc1gb" path="res://Portals/Images/Portal_Wobbly.png" id="10_ueo1c"]
[ext_resource type="Texture2D" uid="uid://b7hpu8nmm024x" path="res://Items/Placeable/Images/ElbowPipe.png" id="11_y0u72"]
[ext_resource type="Texture2D" uid="uid://cdxgo4lcpeg7u" path="res://Items/Placeable/Images/Splitter.png" id="12_6xbfr"]
[ext_resource type="Texture2D" uid="uid://s2e26kigqt2s" path="res://Items/Placeable/Images/Launcher.png" id="13_y5c4i"]
[ext_resource type="Texture2D" uid="uid://6l2v6r0okp1q" path="res://Items/Placeable/Images/Delay.png" id="14_k3f0c"]
[ext_resource type="Texture2D" uid="uid://cset64ha1ps0i" path="res://Items/Placeable/Images/Boom.png" id="15_qjmga"]
[ext_resource type="Texture2D" uid="uid://bhi6ak5ptdjsi" path="res://UI/Icons/GarbageCan_Can.png" id="17_knlt1"]
[ext_resource type="Texture2D" uid="uid://dyqper5ah6k5j" path="res://UI/Icons/GarbageCan_Lid.png" id="18_ao73h"]
[ext_resource type="Script" path="res://UI/PauseMenu.gd" id="19_cs7wa"]
[ext_resource type="Script" path="res://UI/LoseScreen.gd" id="19_phews"]
[ext_resource type="PackedScene" uid="uid://d0y6o4gaxmiju" path="res://main.tscn" id="20_vpswd"]

[sub_resource type="LabelSettings" id="LabelSettings_1b0tl"]
font_size = 30

[sub_resource type="Gradient" id="Gradient_mnwvg"]
colors = PackedColorArray(0, 0, 0, 0.392157, 0, 0, 0, 0.392157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n4mv0"]
gradient = SubResource("Gradient_mnwvg")

[sub_resource type="Gradient" id="Gradient_v1jdf"]
colors = PackedColorArray(0.705882, 0, 1, 0.588235, 0.705882, 0, 1, 0.588235)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bdan5"]
gradient = SubResource("Gradient_v1jdf")

[sub_resource type="Gradient" id="Gradient_qqy6a"]
colors = PackedColorArray(0.921569, 0.921569, 0.921569, 0.588235, 0.921569, 0.921569, 0.921569, 0.588235)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lfia4"]
gradient = SubResource("Gradient_qqy6a")

[sub_resource type="LabelSettings" id="LabelSettings_ubp1w"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_vnjvi"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_atrax"]
font_size = 24

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_y53i7")
BtnSelectedCol = Color(1, 1, 1, 1)
BtnDefaultCol = Color(0.431373, 0.431373, 0.431373, 1)
RerouteScene = ExtResource("2_4mokc")
SplitterScene = ExtResource("3_mkgc3")
LaunchScene = ExtResource("4_pqaxj")
DelayScene = ExtResource("5_3imsr")
DestroyScene = ExtResource("6_ljt71")
TeleportScene = ExtResource("7_5f214")

[node name="OptionsBtn" type="Button" parent="."]
offset_top = 56.0
offset_right = 104.0
offset_bottom = 160.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("8_kv8bb")
flat = true

[node name="SpeedControls" type="HBoxContainer" parent="."]
offset_right = 320.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)

[node name="PauseBtn" type="Button" parent="SpeedControls"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("1_cgm83")
flat = true

[node name="PlayBtn" type="Button" parent="SpeedControls"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("2_v3058")
flat = true

[node name="FastForwardBtn" type="Button" parent="SpeedControls"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("3_iqmpw")
flat = true

[node name="Items" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -78.0001
offset_top = -247.0
offset_right = 186.0
offset_bottom = 1077.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.35, 0.35)

[node name="RerouteBtn" type="Button" parent="Items"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("11_y0u72")
flat = true

[node name="SplitterBtn" type="Button" parent="Items"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("12_6xbfr")
flat = true

[node name="LaunchBtn" type="Button" parent="Items"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("13_y5c4i")
flat = true

[node name="DelayBtn" type="Button" parent="Items"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("14_k3f0c")
flat = true

[node name="DestroyBtn" type="Button" parent="Items"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("15_qjmga")
flat = true

[node name="TeleportBtn" type="Button" parent="Items"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("10_ueo1c")
flat = true

[node name="TrashBtn" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -76.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
flat = true

[node name="Can" type="TextureRect" parent="TrashBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -29.0
offset_right = 149.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.136136
scale = Vector2(0.405, 0.579)
texture = ExtResource("17_knlt1")

[node name="Lid" type="TextureRect" parent="TrashBtn/Can"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.754
offset_top = -75.5521
offset_right = 87.2458
offset_bottom = -11.5521
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.115, 0.865)
texture = ExtResource("18_ao73h")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "1234"
label_settings = SubResource("LabelSettings_1b0tl")
horizontal_alignment = 2

[node name="UpgradeSelect" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("GradientTexture1D_n4mv0")

[node name="Panel" type="TextureRect" parent="UpgradeSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bdan5")

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeSelect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("GradientTexture1D_n4mv0")
script = ExtResource("19_cs7wa")
MenuScene = ExtResource("20_vpswd")

[node name="Background" type="TextureRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bdan5")
expand_mode = 1

[node name="Panel2" type="TextureRect" parent="PauseMenu/Background"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 230.0
texture = SubResource("GradientTexture1D_lfia4")
expand_mode = 1

[node name="Label" type="Label" parent="PauseMenu/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 20.0
offset_right = 84.5
offset_bottom = 70.0
grow_horizontal = 2
text = "Options"
label_settings = SubResource("LabelSettings_ubp1w")
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 83.0
offset_right = 75.0
offset_bottom = 114.0
grow_horizontal = 2
text = "Resume"

[node name="Restart" type="Button" parent="PauseMenu/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 118.0
offset_right = 75.0
offset_bottom = 149.0
grow_horizontal = 2
text = "Restart"

[node name="Menu" type="Button" parent="PauseMenu/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 156.0
offset_right = 75.0
offset_bottom = 187.0
grow_horizontal = 2
text = "Return to Menu"

[node name="LoseScreen" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("GradientTexture1D_n4mv0")
script = ExtResource("19_phews")
MenuScene = ExtResource("20_vpswd")

[node name="Background" type="TextureRect" parent="LoseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bdan5")

[node name="Panel2" type="TextureRect" parent="LoseScreen/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_lfia4")

[node name="Label" type="Label" parent="LoseScreen/Background"]
layout_mode = 1
offset_left = 227.0
offset_top = 9.0
offset_right = 396.0
offset_bottom = 59.0
text = "You lost..."
label_settings = SubResource("LabelSettings_ubp1w")

[node name="Score" type="Label" parent="LoseScreen/Background"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 125.0
offset_top = 65.0
offset_right = 497.0
offset_bottom = 115.0
text = "You delivered xxxxx summoned items!"
label_settings = SubResource("LabelSettings_vnjvi")
horizontal_alignment = 1

[node name="Highscore" type="Label" parent="LoseScreen/Background"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 166.0
offset_top = 108.0
offset_right = 461.0
offset_bottom = 158.0
text = "New Highscore!"
label_settings = SubResource("LabelSettings_atrax")
horizontal_alignment = 1

[node name="Restart" type="Button" parent="LoseScreen/Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -48.0
offset_right = -3.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "Retry"

[node name="Menu" type="Button" parent="LoseScreen/Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -45.0
offset_right = 184.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
text = "Return to Menu"

[connection signal="pressed" from="OptionsBtn" to="PauseMenu" method="_toggle_menu"]
[connection signal="pressed" from="SpeedControls/PauseBtn" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="SpeedControls/PlayBtn" to="." method="_on_play_pressed"]
[connection signal="pressed" from="SpeedControls/FastForwardBtn" to="." method="_on_fast_forward_pressed"]
[connection signal="pressed" from="Items/RerouteBtn" to="." method="_on_spawn_pressed" binds= [1]]
[connection signal="pressed" from="Items/SplitterBtn" to="." method="_on_spawn_pressed" binds= [2]]
[connection signal="pressed" from="Items/LaunchBtn" to="." method="_on_spawn_pressed" binds= [3]]
[connection signal="pressed" from="Items/DelayBtn" to="." method="_on_spawn_pressed" binds= [4]]
[connection signal="pressed" from="Items/DestroyBtn" to="." method="_on_spawn_pressed" binds= [5]]
[connection signal="pressed" from="Items/TeleportBtn" to="." method="_on_spawn_pressed" binds= [6]]
[connection signal="pressed" from="TrashBtn" to="." method="_on_trash_btn_pressed"]
[connection signal="pressed" from="PauseMenu/Background/Resume" to="PauseMenu" method="_toggle_menu"]
[connection signal="pressed" from="PauseMenu/Background/Restart" to="PauseMenu" method="_press_restart"]
[connection signal="pressed" from="PauseMenu/Background/Menu" to="PauseMenu" method="_press_menu"]
[connection signal="pressed" from="LoseScreen/Background/Restart" to="LoseScreen" method="_press_restart"]
[connection signal="pressed" from="LoseScreen/Background/Menu" to="LoseScreen" method="_press_menu"]
